# The-Circle

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  LICENSE  README.md  build.ps1  build_debuglog.ps1  build_nodebuglog.ps1  conanfile.txt  gdd.md  setup.ps1  tdd.md  tdd_v8.md  tdd_v9.md
assets/config/: bosses.json  elements.json  enemies.json  equipment.json  game.json  player.json
assets/lang/: en.json  ru.json
build-conan/: CMakeCache.txt
src/: Game.cpp  Game.hpp  main.cpp
src/config/: ConfigLoader.cpp  ConfigLoader.hpp  ElementalConfig.hpp  EnemyConfig.cpp  EnemyConfig.hpp  EquipmentConfig.hpp  PlayerConfig.hpp
src/core/: AudioManager.cpp  AudioManager.hpp  DebugLog.hpp  FontManager.cpp  FontManager.hpp  Localization.cpp  Localization.hpp  TextUtils.hpp
src/debug/: DebugContext.hpp  DebugDisplayPanel.cpp  DebugDisplayPanel.hpp  DebugOverlay.cpp  DebugOverlay.hpp  DebugPlayerPanel.cpp  DebugPlayerPanel.hpp  DebugSpawnPanel.cpp  DebugSpawnPanel.hpp  DebugWidgets.cpp  DebugWidgets.hpp  DebugWorldPanel.cpp  DebugWorldPanel.hpp
src/ecs/: Components.hpp  ElementalUtils.cpp  ElementalUtils.hpp  EntityFactory.cpp  EntityFactory.hpp  ItemUpgrader.cpp  ItemUpgrader.hpp
src/ecs/systems/: AISystem.cpp  AISystem.hpp  AbilitySystem.cpp  AbilitySystem.hpp  BlizzardSystem.cpp  BlizzardSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  LootSystem.cpp  LootSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  StatusEffectSystem.cpp  StatusEffectSystem.hpp  ZoneSystem.cpp  ZoneSystem.hpp
src/meta/: MetaProgression.cpp  MetaProgression.hpp
src/states/: DeathState.cpp  DeathState.hpp  IGameState.hpp  MainMenuState.cpp  MainMenuState.hpp  MetaUpgradeState.cpp  MetaUpgradeState.hpp  PlayState.cpp  PlayState.hpp
src/ui/: DevPanel.cpp  DevPanel.hpp  HUD.cpp  HUD.hpp  InventoryScreen.cpp  InventoryScreen.hpp  ItemChoiceScreen.cpp  ItemChoiceScreen.hpp  MetaUpgradeScreen.cpp  MetaUpgradeScreen.hpp  PauseScreen.cpp  PauseScreen.hpp  SettingsScreen.cpp  SettingsScreen.hpp  TutorialHint.cpp  TutorialHint.hpp
src/world/: Biome.cpp  Biome.hpp  BiomeType.hpp  World.cpp  World.hpp
